Change website to gitbook.com in authors list

--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -2,8 +2,8 @@
 samypesse:
     name: Samy Pessé
     email: samy@gitbook.io
-    web: https://www.gitbook.io/@samypesse
+    web: https://www.gitbook.com/@samypesse
 aaronomullan:
     name: Aaron O'Mullan
     email: aaron@gitbook.io
-    web: https://www.gitbook.io/@aaronomullan
+    web: https://www.gitbook.com/@aaronomullan
