Add Branches Whitelist article

--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -7,3 +7,7 @@ aaronomullan:
     name: Aaron O'Mullan
     email: aaron@gitbook.io
     web: https://www.gitbook.com/@aaronomullan
+jpreynat:
+    name: Johan Preynat
+    email: johan@gitbook.io
+    web: https://www.gitbook.com/@jpreynat
