--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -1,13 +1,17 @@
 # Author details.
 samypesse:
     name: Samy Pessé
-    email: samy@gitbook.io
+    email: samy@gitbook.com
     web: https://www.gitbook.com/@samypesse
 aaronomullan:
     name: Aaron O'Mullan
-    email: aaron@gitbook.io
+    email: aaron@gitbook.com
     web: https://www.gitbook.com/@aaronomullan
 jpreynat:
     name: Johan Preynat
-    email: johan@gitbook.io
+    email: johan@gitbook.com
     web: https://www.gitbook.com/@jpreynat
+samypesse:
+    name: Nicolas Gaborit
+    email: nicolas@gitbook.com
+    web: https://www.gitbook.com/@soreine
