Fix soreine's author profile

--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -11,7 +11,7 @@ jpreynat:
     name: Johan Preynat
     email: johan@gitbook.com
     web: https://www.gitbook.com/@jpreynat
-samypesse:
+soreine:
     name: Nicolas Gaborit
     email: nicolas@gitbook.com
     web: https://www.gitbook.com/@soreine
